sqlanywhere-server/src/connection/dump/snapshots/sqlanywhere_server__connection__dump__exporter__test__table_col_is_keyword.snap
---
source: sqlanywhere-server/src/connection/dump/exporter.rs
expression: "std::str::from_utf8(&out).unwrap()"
---
PRAGMA foreign_keys=OFF;
BEGIN TRANSACTION;
CREATE TABLE IF NOT EXISTS test ("limit");
COMMIT;

